@@ -83,6 +83,7 @@ if check_missing ext3; then
 	fscheck_ext3
 	mount $dev_vg_lv $mount_dir
 	not fsadm -y --lvresize resize $vg_lv 4M
+	echo n | not lvresize -L4M -r -n $vg_lv
 	lvresize -L+20M -r -n $vg_lv
 	umount $mount_dir
 	fscheck_ext3
